--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         <a href="#">MENU5</a></div>
                     <div class="menu_right">
                         <a href="#">LOGIN</a>
-                        <a href="#" id="register">REGISTER</a>
+                        <a href="#" id="register" class="button">register</a>
                         <img src="img/settings.png" alt="settings" id="settings"></div>
                 </div>
             </div>
@@ -35,7 +35,7 @@
                     <h2>Nam sollicitud nunc, cursus eros vulputate sed. Vestibulum lobortis.</h2>
                     <div class="links_main">
                         <a href="#" id="more_info">MORE INFO</a>
-                        <a href="#" id="see_detail">SEE DETAIL</a></div>
+                        <a href="#" id="see_detail" class="button">SEE DETAIL</a></div>
                     <img src="img/banner1.png" id="banner1" alt="banner1">
                 </div>
                 <div class="benefits">
@@ -61,32 +61,152 @@
                     <p>Ut sed eros finibus, placerat orci id, dapibus mauris.</p>
                 </div>
                 <div class="img_main">
-                    <span id="i1"><img src="img/Feature1100k.png" alt="+100k">
+                    <div id="i1"><img src="img/Feature1100k.png" alt="+100k">
                         <h3>+100K</h3>
                         <h5>HD Videos</h5>
-                    </span>
-                    <span id="i2"><img src="img/Feature2.png" alt="+200">
+                    </div>
+                    <div id="i2"><img src="img/Feature2.png" alt="+200">
                         <h3>+200</h3>
                         <h5>Profession</h5>
-                    </span>
-                    <span id="i3"><img src="img/Feature3.png" alt="500$">
+                    </div>
+                    <div id="i3"><img src="img/Feature3.png" alt="500$">
                         <h3>$500</h3>
                         <h5>Saves per Month</h5>
-                    </span>
-                    <span id="i4"><img src="img/Feature4.png" alt="Free">
+                    </div>
+                    <div id="i4"><img src="img/Feature4.png" alt="Free">
                         <h3>Free</h3>
                         <h5>Life Time Access</h5>
-                    </span>
+                    </div>
+                </div>
+            </div>
+            <div class="popular_course">
+                <div class="pop_course">
+                    <div class="pop_course_h2p">
+                        <h2>Popular course</h2>
+                        <p>Choose from many options of popular course at a breakthrough price</p>
+                    </div>
+                    <a href="#" id="see_pop">See all</a>
+                </div>
+                <div class="product_items">
+                    <img src="/img/About.png" alt="about" id="about_product">
+                    <div class="items">
+                        <div class="product-item1">
+                            <img src="/img/course.jpg" alt="product-item">
+                            <div class="product-list">
+                                <h3>Course 1</h3>
+                                <p>Choose from many options of popular course at a breakthrough price</p>
+                                <span class="price">$ 50</span>
+                                <a href="" class="button">SEE DETAIL</a>
+                            </div>
+                        </div>
+                        <div class="product-item2">
+                            <img src="/img/course.jpg" alt="product-item">
+                            <div class="product-list">
+                                <h3>Course 2</h3>
+                                <p>Choose from many options of popular course at a breakthrough price</p>
+                                <span class="price">$ 10</span>
+                                <a href="" class="button">SEE DETAIL</a>
+                            </div>
+                        </div>
+                        <div class="product-item3">
+                            <img src="/img/course.jpg" alt="product-item">
+                            <div class="product-list">
+                                <h3>Course 3</h3>
+                                <p>Choose from many options of popular course at a breakthrough price</p>
+                                <span class="price">$ 50</span>
+                                <a href="" class="button">SEE DETAIL</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="explore">
+                <div class="explore1">
+                    <h2>Explore Course</h2>
+                    <p>Ut sed eros finibus, placerat orci id, dapibus.</p>
+                    <h4>Lorem Ipsum</h4>
+                    <a href="#" class="a1">See all</a>
+                    <a href="#" class="a2">Ut Sed Eros</a>
+                    <a href="#" class="a3">Curabitur Egestas</a>
+                    <a href="#" class="a4">Quisque Conseq…</a>
+                    <a href="#" class="a5">Cras Convallis</a>
+                    <a href="#" class="a6">Vestibulum fauci…</a>
+                    <a href="#" class="a7">Ut Sed Eros</a>
+                    <a href="#" class="a8">Vestibulum faucibu</a>
+                    <div class="integer1">
+                        <h3>Integer</h3>
+                        <span class="price">₽ 1999</span>
+                        <a href="" class="button">EXPLORE</a>
+                    </div>
+                </div>
+                <div class="explore2">
+                    <h4>Quisque a Consequat</h4>
+                    <a href="#" class="a9">See all</a>
+                    <a href="#" class="a10">Ut Sed Eros</a>
+                    <a href="#" class="a11">Curabitur Egestas</a>
+                    <a href="#" class="a12">Quisque Conseq…</a>
+                    <a href="#" class="a13">Cras Convallis</a>
+                    <div class="intege2">
+                        <h3>Integer</h3>
+                        <span class="price">₽ 1999</span>
+                        <a href="" class="button">EXPLORE</a>
+                    </div>
+                    <a href="#" class="a14">Vestibulum fauci…</a>
+                    <a href="#" class="a15">Ut Sed Eros</a>
+                    <a href="#" class="a16">Vestibulum faucibu</a>
+                </div>
+                <div class="explore3">
+                    <h4>Aenean Facilisis</h4>
+                    <a href="#" class="a17">See all</a>
+                    <a href="#" class="a18">Ut Sed Eros</a>
+                    <div class="intege3">
+                        <h3>Integer</h3>
+                        <span class="price">₽ 1999</span>
+                        <a href="#" class="button">EXPLORE</a>
+                    </div>
+                    <a href="#" class="a19">Curabitur Egestas</a>
+                    <a href="#" class="a20">Quisque Conseq…</a>
+                    <a href="#" class="a21">Cras Convallis</a>
+                    <a href="#" class="a22">Vestibulum fauci…</a>
+                    <a href="#" class="a23">Ut Sed Eros</a>
+                    <a href="#" class="a24">Vestibulum faucibu</a>
+                </div>
+            </div>
+
+            <div class="about">
+                <img src="/img/About.png" alt="about">
+                <h2>About Us</h2>
+                <p>Aliquam gravida quam dui, venenatis suscipit erat dapibus eu. Donec non libero ultricies Cras
+                    convallis lacus orci.<br />
+                    Tristique tincidunt magna consequat in. In vel pulvinar est, at euismod libero. Quisque ut metus sit
+                    amet augue rutrum feugiat.</p>
+                <a href="" class="button">JOIN NOW</a>
+            </div>
+            <div class="testimonials">
+                <h2>Testimonials</h2>
+                <p>Ut sed eros finibus, placerat orci id, dapibus mauris.</p>
+                <div class="test1">
+                    <p>Nam sollicitudin dignissim nunc, cursus ullamcorper eros vulputate sed. Vestibulum sit amet
+                        tortor
+                        sit amet libero lobortis semper at et odio. In eu tellus tellus t
+                        Pellentesque ullamcorper aliquet ultrices.</p>
+                    <p>John Doe</p>
+                </div>
+                <div class="test2">
+                    <p>Nam sollicitudin dignissim nunc, cursus ullamcorper eros vulputate sed. Vestibulum sit amet
+                        tortor
+                        sit amet libero lobortis semper at et odio. In eu tellus tellus t
+                        Pellentesque ullamcorper aliquet ultrices.</p>
+                    <p>John Doe</p>
                 </div>
             </div>
         </section>
-
         <footer>
             <div class="subscribe">
                 <h2>Subscribe our newsletter</h2>
                 <h4>Sed imperdiet enim ligula, vitae viverra justo porta vel. Duis eget felis bibendum, pretium mi sed,
                     placerat ante. </h4>
-                <div><input type="text" name="email" placeholder="Enter your email address" />
+                <div class="subscribe_form"><input type="text" name="email" placeholder="Enter your email address" />
                     <input type="submit" value="SUBSCRIBE" /></div>
             </div>
             <div class="logo_footer">
@@ -119,7 +239,6 @@
             </div>
         </footer>
     </div>
-
 </body>
 
 </html>
