--- a/index.html
+++ b/index.html
@@ -7,25 +7,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+
+    </style>
+
 </head>
 
 <body>
     <div class="wrapper">
         <header>
-            <div class="container">
-                <div class="menu">
-                    <img src="img/Landsacpe.png" alt="logo" id="logo">
-                    <div class="menu_left">
-                        <a href="#">MENU1</a>
-                        <a href="#">MENU2</a>
-                        <a href="#">MENU3</a>
-                        <a href="#">MENU4</a>
-                        <a href="#">MENU5</a></div>
-                    <div class="menu_right">
-                        <a href="#">LOGIN</a>
-                        <a href="#" id="register" class="button">register</a>
-                        <img src="img/settings.png" alt="settings" id="settings"></div>
-                </div>
+            <div class="menu">
+                <img src="img/Landsacpe.png" alt="logo" id="logo">
+                <div class="menu_left">
+                    <a href="#">MENU1</a>
+                    <a href="#">MENU2</a>
+                    <a href="#">MENU3</a>
+                    <a href="#">MENU4</a>
+                    <a href="#">MENU5</a></div>
+                <div class="menu_right">
+                    <a href="#">LOGIN</a>
+                    <a href="#" class="button_tegister">register</a>
+                    <img src="img/settings.png" alt="settings" id="settings"></div>
             </div>
         </header>
         <main>
@@ -35,7 +37,7 @@
                     <h2>Nam sollicitud nunc, cursus eros vulputate sed. Vestibulum lobortis.</h2>
                     <div class="links_main">
                         <a href="#" id="more_info">MORE INFO</a>
-                        <a href="#" id="see_detail" class="button">SEE DETAIL</a></div>
+                        <a href="#" class="button_detail">SEE DETAIL</a></div>
                     <img src="img/banner1.png" id="banner1" alt="banner1">
                 </div>
                 <div class="benefits">
@@ -57,7 +59,7 @@
         <section>
             <div class="section_feature">
                 <div class="main_feature">
-                    <h2>Main Feature</h2>
+                    <h1>Main Feature</h1>
                     <p>Ut sed eros finibus, placerat orci id, dapibus mauris.</p>
                 </div>
                 <div class="img_main">
@@ -82,160 +84,205 @@
             <div class="popular_course">
                 <div class="pop_course">
                     <div class="pop_course_h2p">
-                        <h2>Popular course</h2>
+                        <h1>Popular course</h1>
                         <p>Choose from many options of popular course at a breakthrough price</p>
                     </div>
                     <a href="#" id="see_pop">See all</a>
                 </div>
                 <div class="product_items">
                     <img src="/img/About.png" alt="about" id="about_product">
-                    <div class="items">
-                        <div class="product-item1">
-                            <img src="/img/course.jpg" alt="product-item">
-                            <div class="product-list">
-                                <h3>Course 1</h3>
-                                <p>Choose from many options of popular course at a breakthrough price</p>
-                                <span class="price">$ 50</span>
-                                <a href="" class="button">SEE DETAIL</a>
-                            </div>
+                    <div class="product-item1">
+                        <img src="/img/course.jpg" alt="product-item">
+                        <div class="product-list1">
+                            <h3>Course 1</h3>
+                            <p>Choose from many options of popular course at a breakthrough price</p>
+                            <span class="price">$ 50</span>
+                            <a href="" class="button">SEE DETAIL</a>
                         </div>
-                        <div class="product-item2">
-                            <img src="/img/course.jpg" alt="product-item">
-                            <div class="product-list">
-                                <h3>Course 2</h3>
-                                <p>Choose from many options of popular course at a breakthrough price</p>
-                                <span class="price">$ 10</span>
-                                <a href="" class="button">SEE DETAIL</a>
-                            </div>
+                    </div>
+                    <div class="product-item2">
+                        <img src="/img/course.jpg" alt="product-item">
+                        <div class="product-list2">
+                            <h3>Course 2</h3>
+                            <p>Choose from many options of popular course at a breakthrough price</p>
+                            <span class="price">$ 10</span>
+                            <a href="" class="button">SEE DETAIL</a>
                         </div>
-                        <div class="product-item3">
-                            <img src="/img/course.jpg" alt="product-item">
-                            <div class="product-list">
-                                <h3>Course 3</h3>
-                                <p>Choose from many options of popular course at a breakthrough price</p>
-                                <span class="price">$ 50</span>
-                                <a href="" class="button">SEE DETAIL</a>
-                            </div>
+                    </div>
+                    <div class="product-item3">
+                        <img src="/img/course.jpg" alt="product-item">
+                        <div class="product-list3">
+                            <h3>Course 3</h3>
+                            <p>Choose from many options of popular course at a breakthrough price</p>
+                            <span class="price">$ 50</span>
+                            <a href="" class="button">SEE DETAIL</a>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="explore">
-                <div class="explore1">
-                    <h2>Explore Course</h2>
-                    <p>Ut sed eros finibus, placerat orci id, dapibus.</p>
-                    <h4>Lorem Ipsum</h4>
-                    <a href="#" class="a1">See all</a>
-                    <a href="#" class="a2">Ut Sed Eros</a>
-                    <a href="#" class="a3">Curabitur Egestas</a>
-                    <a href="#" class="a4">Quisque Conseq…</a>
-                    <a href="#" class="a5">Cras Convallis</a>
-                    <a href="#" class="a6">Vestibulum fauci…</a>
-                    <a href="#" class="a7">Ut Sed Eros</a>
-                    <a href="#" class="a8">Vestibulum faucibu</a>
-                    <div class="integer1">
-                        <h3>Integer</h3>
-                        <span class="price">₽ 1999</span>
-                        <a href="" class="button">EXPLORE</a>
+                <div class="explore_title">
+                    <div class="explore_course">
+                        <h1>Explore Course</h1>
+                        <p>Ut sed eros finibus, placerat orci id, dapibus.</p>
                     </div>
+                    <div class="exp_title1">
+                        <h2>Lorem Ipsum</h2>
+                        <a href="#" class="a1">See all →</a>
+                    </div>
+                </div>
+                <div class="explore1">
+                    <div class="links1_exp">
+                        <a href="#" class="a2">Ut Sed Eros</a>
+                        <a href="#" class="a3">Curabitur Egestas</a>
+                        <a href="#" class="a4">Quisque Conseq…</a>
+                        <a href="#" class="a5">Cras Convallis</a>
+                        <a href="#" class="a6">Vestibulum fauci…</a>
+                        <a href="#" class="a7">Ut Sed Eros</a>
+                        <a href="#" class="a8">Vestibulum faucibu</a>
+                    </div>
+                    <div class="integer1">
+                        <img src="/img/course.jpg" alt="product-item">
+                        <div class="integer_item1">
+                            <h2>Integer</h2>
+                            <span class="price_exp">₽ 1999</span>
+                            <a href="" class="button_exp">EXPLORE</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="exp_title2">
+                    <h2>Quisque a Consequat</h2>
+                    <a href="#" class="a9">See all →</a>
                 </div>
                 <div class="explore2">
-                    <h4>Quisque a Consequat</h4>
-                    <a href="#" class="a9">See all</a>
-                    <a href="#" class="a10">Ut Sed Eros</a>
-                    <a href="#" class="a11">Curabitur Egestas</a>
-                    <a href="#" class="a12">Quisque Conseq…</a>
-                    <a href="#" class="a13">Cras Convallis</a>
-                    <div class="intege2">
-                        <h3>Integer</h3>
-                        <span class="price">₽ 1999</span>
-                        <a href="" class="button">EXPLORE</a>
+                    <div class="links2_exp">
+                        <a href="#" class="a10">Ut Sed Eros</a>
+                        <a href="#" class="a11">Curabitur Egestas</a>
+                        <a href="#" class="a12">Quisque Conseq…</a>
+                        <a href="#" class="a13">Cras Convallis</a></div>
+                    <div class="integer2">
+                        <img src="/img/course.jpg" alt="product-item">
+                        <div class="integer_item2">
+                            <h2>Integer</h2>
+                            <span class="price_exp">₽ 1999</span>
+                            <a href="" class="button_exp">EXPLORE</a>
+                        </div>
                     </div>
-                    <a href="#" class="a14">Vestibulum fauci…</a>
-                    <a href="#" class="a15">Ut Sed Eros</a>
-                    <a href="#" class="a16">Vestibulum faucibu</a>
+                    <div class="links2_2_exp">
+                        <a href="#" class="a14">Vestibulum fauci…</a>
+                        <a href="#" class="a15">Ut Sed Eros</a>
+                        <a href="#" class="a16">Vestibulum faucibu</a></div>
+                </div>
+                <div class="exp_title3">
+                    <h2>Aenean Facilisis</h2>
+                    <a href="#" class="a17">See all →</a>
                 </div>
                 <div class="explore3">
-                    <h4>Aenean Facilisis</h4>
-                    <a href="#" class="a17">See all</a>
-                    <a href="#" class="a18">Ut Sed Eros</a>
-                    <div class="intege3">
-                        <h3>Integer</h3>
-                        <span class="price">₽ 1999</span>
-                        <a href="#" class="button">EXPLORE</a>
+                    <div class="links3_exp">
+                        <a href="#" class="a18">Ut Sed Eros</a>
                     </div>
-                    <a href="#" class="a19">Curabitur Egestas</a>
-                    <a href="#" class="a20">Quisque Conseq…</a>
-                    <a href="#" class="a21">Cras Convallis</a>
-                    <a href="#" class="a22">Vestibulum fauci…</a>
-                    <a href="#" class="a23">Ut Sed Eros</a>
-                    <a href="#" class="a24">Vestibulum faucibu</a>
+                    <div class="integer3">
+                        <img src="/img/course.jpg" alt="product-item">
+                        <div class="integer_item3">
+                            <h2>Integer</h2>
+                            <span class="price_exp">₽ 1999</span>
+                            <a href="#" class="button_exp">EXPLORE</a>
+                        </div>
+                    </div>
+                    <div class="links3_2_exp">
+                        <a href="#" class="a19">Curabitur Egestas</a>
+                        <a href="#" class="a20">Quisque Conseq…</a>
+                        <a href="#" class="a21">Cras Convallis</a>
+                        <a href="#" class="a22">Vestibulum fauci…</a>
+                        <a href="#" class="a23">Ut Sed Eros</a>
+                        <a href="#" class="a24">Vestibulum faucibu</a>
+                    </div>
                 </div>
             </div>
-
             <div class="about">
                 <img src="/img/About.png" alt="about">
-                <h2>About Us</h2>
-                <p>Aliquam gravida quam dui, venenatis suscipit erat dapibus eu. Donec non libero ultricies Cras
-                    convallis lacus orci.<br />
-                    Tristique tincidunt magna consequat in. In vel pulvinar est, at euismod libero. Quisque ut metus sit
-                    amet augue rutrum feugiat.</p>
-                <a href="" class="button">JOIN NOW</a>
+                <div class="about_text">
+                    <h1>About Us</h1>
+                    <p>Aliquam gravida quam dui, venenatis suscipit erat dapibus eu. Donec non libero ultricies Cras
+                        convallis lacus orci.</p>
+                    <p> Tristique tincidunt magna consequat in. In vel pulvinar est, at euismod libero. Quisque ut metus
+                        sit
+                        amet augue rutrum feugiat.</p>
+                    <a href="" class="button_about">JOIN NOW</a>
+                </div>
             </div>
             <div class="testimonials">
-                <h2>Testimonials</h2>
-                <p>Ut sed eros finibus, placerat orci id, dapibus mauris.</p>
-                <div class="test1">
-                    <p>Nam sollicitudin dignissim nunc, cursus ullamcorper eros vulputate sed. Vestibulum sit amet
-                        tortor
-                        sit amet libero lobortis semper at et odio. In eu tellus tellus t
-                        Pellentesque ullamcorper aliquet ultrices.</p>
-                    <p>John Doe</p>
+                <div class="tests">
+                    <h1>Testimonials</h1>
+                    <p>Ut sed eros finibus, placerat orci id, dapibus mauris.</p>
                 </div>
-                <div class="test2">
-                    <p>Nam sollicitudin dignissim nunc, cursus ullamcorper eros vulputate sed. Vestibulum sit amet
-                        tortor
-                        sit amet libero lobortis semper at et odio. In eu tellus tellus t
-                        Pellentesque ullamcorper aliquet ultrices.</p>
-                    <p>John Doe</p>
+                <div class="images_tests">
+                    <img src="/img/Group 2.png" alt="group2" id="img_test1">
+                    <img src="/img/Group 2.png" alt="group2" id="img_test2"></div>
+                <div class="test1_2">
+                    <div class="test1">
+                        <p>Nam sollicitudin dignissim nunc, cursus ullamcorper eros vulputate sed. Vestibulum sit
+                            amet
+                            tortor
+                            sit amet libero lobortis semper at et odio. In eu tellus tellus t
+                            Pellentesque ullamcorper aliquet ultrices.</p>
+                        <p>John Doe</p>
+                    </div>
+                    <div class="test2">
+                        <p>Nam sollicitudin dignissim nunc, cursus ullamcorper eros vulputate sed. Vestibulum sit amet
+                            tortor
+                            sit amet libero lobortis semper at et odio. In eu tellus tellus t
+                            Pellentesque ullamcorper aliquet ultrices.</p>
+                        <p>John Doe</p>
+                    </div>
                 </div>
             </div>
         </section>
         <footer>
             <div class="subscribe">
-                <h2>Subscribe our newsletter</h2>
-                <h4>Sed imperdiet enim ligula, vitae viverra justo porta vel. Duis eget felis bibendum, pretium mi sed,
-                    placerat ante. </h4>
+                <div class="footer_sub">
+                    <img src="/img/CallAction.png" alt="sub_img" id="sub_img">
+                    <div class="footer_sub_h1p">
+                        <h1>Subscribe our newsletter</h1>
+                        <p>Sed imperdiet enim ligula, vitae viverra justo porta vel. Duis eget felis bibendum, pretium
+                            mi
+                            sed,
+                            placerat ante.</p>
+                    </div>
+                </div>
                 <div class="subscribe_form"><input type="text" name="email" placeholder="Enter your email address" />
-                    <input type="submit" value="SUBSCRIBE" /></div>
-            </div>
-            <div class="logo_footer">
-                <img src="img/Landsacpe.png" alt="logo" id="logo_footer">
-            </div>
-            <div class="csr">
-                <div class="company_footer">
-                    <h2>COMPANY</h2>
-                    <h4>Cras convallis</h4>
-                    <h4>Vestibulum faucibus</h4>
-                    <h4>Quisque lacinia purus</h4>
-                    <h4>Aliquam nec ex</h4>
-                </div>
-                <div class="services_footer">
-                    <h2>SERVICES</h2>
-                    <h4>Cras convallis</h4>
-                    <h4>Vestibulum faucibus</h4>
-                    <h4>Quisque lacinia purus</h4>
-                    <h4>Aliquam nec ex</h4>
-                </div>
-                <div class="resources">
-                    <h2>RESOURCES</h2>
-                    <h4>Suspendisse porttitor</h4>
-                    <h4>Nam posuere</h4>
-                    <h4>Curabitur egestas</h4>
+                    <input type="submit" value="SUBSCRIBE" />
                 </div>
             </div>
-            <div class="soc_footer">
-                <img src="img/Socmed.png" alt="soc" id="soc">
+            <div class="sub_scr">
+                <div class="logo_footer">
+                    <img src="img/Landsacpe.png" alt="logo" id="logo_footer">
+                </div>
+                <div class="scr">
+                    <div class="company_footer">
+                        <h2>COMPANY</h2>
+                        <h4>Cras convallis</h4>
+                        <h4>Vestibulum faucibus</h4>
+                        <h4>Quisque lacinia purus</h4>
+                        <h4>Aliquam nec ex</h4>
+                    </div>
+                    <div class="services_footer">
+                        <h2>SERVICES</h2>
+                        <h4>Cras convallis</h4>
+                        <h4>Vestibulum faucibus</h4>
+                        <h4>Quisque lacinia purus</h4>
+                        <h4>Aliquam nec ex</h4>
+                    </div>
+                    <div class="resources">
+                        <h2>RESOURCES</h2>
+                        <h4>Suspendisse porttitor</h4>
+                        <h4>Nam posuere</h4>
+                        <h4>Curabitur egestas</h4>
+                    </div>
+                </div>
+                <div class="soc_footer">
+                    <img src="img/Socmed.png" alt="soc" id="soc">
+                </div>
             </div>
         </footer>
     </div>
